05-players/player04/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-player04
  labels:
     app: players
