05-players/player04/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-player04
  namespace: ns-player04
  labels:
    app: player04
spec:
  replicas: 3
  selector:
    matchLabels:
      app: player04
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: player04
    spec:
      containers:
      - name: web-example
        image: stefanprodan/podinfo
        ports:
        - containerPort: 9898
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: svc-player04
  namespace: ns-player04
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9898
  selector:
    app: player04
